--- a/FlashcardReview/Base.lproj/Main.storyboard
+++ b/FlashcardReview/Base.lproj/Main.storyboard
@@ -94,7 +94,7 @@
             </objects>
             <point key="canvasLocation" x="-500" y="134"/>
         </scene>
-        <!--Categories-->
+        <!--Topics-->
         <scene sceneID="hv5-kI-Bx8">
             <objects>
                 <tableViewController storyboardIdentifier="CategoriesTableViewController" id="wfR-iw-DUK" customClass="CategoriesTableViewController" customModule="FlashcardReview" customModuleProvider="target" sceneMemberID="viewController">
@@ -136,7 +136,7 @@
                             <outlet property="delegate" destination="wfR-iw-DUK" id="SMs-zu-4Wa"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Categories" id="60A-Ut-acD">
+                    <navigationItem key="navigationItem" title="Topics" id="60A-Ut-acD">
                         <barButtonItem key="rightBarButtonItem" title="New Category" id="W2N-6X-HjQ">
                             <connections>
                                 <action selector="newCategoryBarButtonPressed:" destination="wfR-iw-DUK" id="RJQ-WW-Zdk"/>
@@ -398,7 +398,7 @@
                                 <constraints>
                                     <constraint firstAttribute="height" constant="20.5" id="ovk-PA-1o8"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" weight="thin" pointSize="17"/>
+                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
